# ah-ah-ah

./: .gitignore  .justfile  .repo.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  deny.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/docs/: README.md  benchmarks-howto.md  releases.md
.github/workflows/: benchmarks.yml  cd.yml  release.yml
.handoffs/: 2026-03-11-180000-initial-token-counting.md  2026-03-16-1036-tests-benchmarks-accuracy-docs.md
benches/: divan_benchmarks.rs
examples/: README.md  count.rs
record/audit/: 2026-03-17-audit-resolutions.md  2026-03-17-security-code-quality-audit.md
scripts/: gen-token-fixtures.sh
src/: backend.rs  claude.rs  decompose.rs  error.rs  lib.rs  openai.rs  tokens.rs
tests/: token_counting.rs
